--- a/index.html
+++ b/index.html
@@ -42,7 +42,79 @@
 
 			height: 50px;
 
-			font-size: 20px;
+			font-size: 20px;<!DOCTYPE html>
+
+<html>
+
+<head>
+
+	<title>Számológép</title>
+
+	<link rel="stylesheet" type="text/css" href="style.css">
+
+</head>
+
+<body>
+
+	<div class="calculator">
+
+		<div class="display">
+
+			<span id="result">0</span>
+
+		</div>
+
+		<div class="keys">
+
+			<button id="clear">C</button>
+
+			<button id="backspace">⌫</button>
+
+			<button id="percent">%</button>
+
+			<button id="divide">÷</button>
+
+			<button id="seven">7</button>
+
+			<button id="eight">8</button>
+
+			<button id="nine">9</button>
+
+			<button id="multiply">×</button>
+
+			<button id="four">4</button>
+
+			<button id="five">5</button>
+
+			<button id="six">6</button>
+
+			<button id="subtract">−</button>
+
+			<button id="one">1</button>
+
+			<button id="two">2</button>
+
+			<button id="three">3</button>
+
+			<button id="add">+</button>
+
+			<button id="negate">±</button>
+
+			<button id="zero">0</button>
+
+			<button id="decimal">.</button>
+
+			<button id="equals">=</button>
+
+		</div>
+
+	</div>
+
+	<script src="script.js"></script>
+
+</body>
+
+</html>
 
 			margin-bottom: 10px;
 
